--- a/data/hex/c/Makefile
+++ b/data/hex/c/Makefile
@@ -1,5 +1,5 @@
-# Project: Catherine (https://github.com/CatherineFramework)
-# Module by: azazelm3dj3d (https://github.com/azazelm3dj3d)
+# Project: Catherine Framework (https://github.com/jinxsecurity/catherine)
+# Author: azazelm3dj3d (https://github.com/azazelm3dj3d)
 # License: BSD 2-Clause
 
 hex.so:
